fixed welcome sections elements going out of bounds using media queries

--- a/style.css
+++ b/style.css
@@ -229,16 +229,20 @@ footer p a:hover {
     font-size: 1.7rem;
   }
 }
+/* -------------------------------------------------------------------------------------------- media query for 460px screen */
+@media only screen and (min-width: 760px) {
+  .welcome-section-img-container img {
+    height: 40%;
+  }
+}
+/* -------------------------------------------------------------------------------------------- media query for 790px screen */
+@media only screen and (min-width: 790px) {
+  .project-tile {
+    padding: 0.5rem;
+  }
+}
 /* -------------------------------------------------------------------------------------------- media query for 1024px screen */
 @media only screen and (min-width: 1024px) {
-  .welcome-section-img-container {
-    flex-direction: row;
-    justify-content: center;
-  }
-  .welcome-section-img-container img {
-    max-width: 40%;
-    margin-top: 0px;
-  }
   /* ------------------------------------------------------------ about sections CSS */
   #about p {
   text-align: justify;
@@ -254,6 +258,14 @@ footer p a:hover {
 }
 /* -------------------------------------------------------------------------------------------- media query for 1280px screen */
 @media only screen and (min-width: 1280px) {
+  .welcome-section-img-container {
+    flex-direction: row;
+    justify-content: center;
+  }
+  .welcome-section-img-container img {
+    max-width: 40%;
+    margin-top: 0px;
+  }
   #welcome-section-container, .project-continer {
     width: 1260px;
     margin: auto;
